# loguru-config

./: .gitignore  LICENSE  README.md  pyproject.toml
loguru_config/: __init__.py
loguru_config/config/: log.ini
loguru_config/modules/: errors.py  internal.py  public.py
loguru_config/tests/: test_parser.py
