[tool.poetry]
name = "loguru_config"
version = "0.1.0"
description = ""
authors = ["Andrés Ferreiro <andres.ferreiro.glez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.4.1"

[tool.poetry.dev-dependencies]
pep8 = "^1.7.1"
pylint = "^2.4.4"
rope = "^0.16.0"
black = {version = "^19.10b0", allow-prereleases = true}
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
